# config-formatter

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config_formatter.py  pyproject.toml  setup.cfg
.github/: SECURITY.md
.github/workflows/: lint.yml  tests.yml
tests/: test_prettify.py
