[metadata]
name = config-formatter
version = 1.2.0
description = An automatic formatter for .ini and .cfg configuration files
author = Delgan
author_email = delgan.py@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = config, formatter, ini, cfg, configuration, configparser
url = https://github.com/Delgan/config-formatter
project_urls =
    Changelog = https://github.com/Delgan/config-formatter/blob/main/CHANGELOG.md
classifiers =
  Development Status :: 5 - Production/Stable
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Software Development :: Quality Assurance
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules =
    config_formatter
python_requires = >=3.6
install_requires =
    configupdater>=3.0
include_package_data = True

[options.extras_require]
dev =
  pre-commit>=2.17.0
  pytest>=6.0.0
